kubernetes/bootstrap/argocd/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  parentRefs:
    - name: main-gateway
      namespace: traefik
      sectionName: https
  hostnames:
    - "argocd.PLACEHOLDER"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: argocd-server
          port: 80
